# wiremix

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  package.nix  pwmixer.conf  wiremix.desktop  wiremix.toml
.github/actions/setup-dependencies/: action.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  atomic_f32.rs  capture_manager.rs  command.rs  config.rs  device_kind.rs  device_type.rs  device_widget.rs  dropdown_widget.rs  event.rs  help.rs  input.rs  lib.rs  main.rs  media_class.rs  message.rs  meter.rs  monitor.rs  named_constraints.rs  names.rs  node_list.rs  node_widget.rs  object.rs  object_list.rs  opt.rs  popup_widget.rs  state.rs  trace.rs  truncate.rs  view.rs  vsync.rs  wirehose.rs
src/config/: char_set.rs  filter.rs  format_string.rs  help.rs  keybinding.rs  matching.rs  name_override.rs  name_template.rs  names.rs  property_key.rs  tag.rs  theme.rs
src/monitor/: client.rs  command.rs  device.rs  device_status.rs  event.rs  event_sender.rs  execute.rs  link.rs  message_sender.rs  metadata.rs  node.rs  property_store.rs  proxy.rs  proxy_registry.rs  session.rs  state.rs  stream.rs  stream_registry.rs  sync_registry.rs
src/names/: format_string.rs  tag.rs
src/wirehose/: client.rs  command.rs  deserialize.rs  device.rs  event.rs  event_sender.rs  execute.rs  link.rs  media_class.rs  metadata.rs  node.rs  object_id.rs  property_store.rs  proxy_registry.rs  session.rs  state.rs  stream.rs  stream.rs.rej  stream_registry.rs  sync_registry.rs
