[package]
name = "pwmixer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
itertools = "0.14.0"
libspa = "0.8.0"
libspa-sys = "0.8.0"
log = "0.4.24"
nix = { version = "0.29.0", features = ["event"] }
pipewire = { version = "0.8.0", features = ["v0_3_44"] }
ratatui = "0.29.0"
scopeguard = "1.2.0"
serde_json = "1.0.137"
tracing = { version = "0.1.41", optional = true }
tracing-error = { version = "0.2.1", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
unicode-width = "0.2.0"

[features]
trace = ["dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]
