[package]
name = "wiremix"
version = "0.5.0"
authors = ["Thomas Sowell <tom@ldtlb.com>"]
description = "A TUI mixer for PipeWire"
readme = "README.md"
repository = "https://github.com/tsowell/wiremix"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["mixer", "pipewire", "volume", "audio", "tui"]
edition = "2021"
rust-version = "1.74.1"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md", "wiremix.toml"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
futures = "0.3.31"
futures-timer = "3.0.3"
itertools = "0.14.0"
libspa = "0.8.0"
libspa-sys = "0.8.0"
log = "0.4.24"
nix = { version = "0.29.0", features = ["event", "term"] }
pipewire = { version = "0.8.0", features = ["v0_3_44"] }
ratatui = { version = "0.29.0", features = ["serde"] }
regex = "1.11.1"
scopeguard = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
smallvec = "1.14.0"
toml = "0.8.20"
tracing = { version = "0.1.41", optional = true }
tracing-error = { version = "0.2.1", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
unicode-width = "0.2.0"

[dev-dependencies]
strum = { version = "0.27.1", features = ["derive"] }

[features]
trace = ["dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]

[profile.release]
codegen-units = 1
lto = true
