[package]
name = "wiremix"
version = "0.9.0"
authors = ["Thomas Sowell <tom@ldtlb.com>"]
description = "A TUI mixer for PipeWire"
readme = "README.md"
repository = "https://github.com/tsowell/wiremix"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["mixer", "pipewire", "volume", "audio", "tui"]
edition = "2021"
rust-version = "1.74.0"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md", "wiremix.toml"]
build = "build.rs"

[build-dependencies]
vergen-git2 = "1.0.1"

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.24.0"
clap = { version = "4.5.26", features = ["derive", "wrap_help"] }
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
futures = "0.3.31"
futures-timer = "3.0.3"
itertools = "0.14.0"
libspa = "0.8.0"
libspa-sys = "0.8.0"
log = "0.4.24"
nix = { version = "0.29.0", features = ["event", "term"] }
pipewire = { version = "0.8.0", features = ["v0_3_44"] }
pulp = "0.22.2"
ratatui = { version = "0.29.0", features = ["serde"] }
regex = "1.12.3"
scopeguard = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
smallvec = "1.14.0"
toml = "1.0.3"
tracing = { version = "0.1.41", optional = true }
tracing-error = { version = "0.2.1", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }

[dev-dependencies]
paste = "1.0.15"
strum = { version = "0.27.1", features = ["derive"] }

[features]
trace = ["dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]

[profile.release]
codegen-units = 1
lto = true
